--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 <head>
 {{> ../templates/partials/security }}
 
 {{> ../templates/partials/head }}
-	<title>Welcome to the Binary Bot</title>
+	<title>Bem vindo ao OneBot</title>
 {{> index_css }}
 <link rel="stylesheet" href="css/binary.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gridle@2.0.48/css/grid-flex.css" integrity="sha256-J4p1c+K4tD3rnyfA0ztZpoQR0+mBhDTZ/J+YNOalc0k=" crossorigin="anonymous">
@@ -14,7 +14,7 @@
 	{{> ../templates/partials/loading }}
 	<div id="topbar">
     <div class="wrapper show-on-load">
-		  {{> ../templates/partials/language }}
+		
     </div>
 	</div>
 	<div id="header">
@@ -28,31 +28,20 @@
 	<div id="main">
 		<div>
 			<div class="content show-on-load">
-				<h1 class="center" data-i18n-text="Binary Bot"></h1>
-                <h3 class="center" data-i18n-text="Trade More Efficiently Than You Ever Thought Possible"></h3>
-      		<div id="split-container">
-                <div class="half-width top-image">
-                    <img src="image/binarylogo-puzzle.svg" alt="">
-                </div>
-                <div class="half-width index-text">
-                    <p data-i18n-text="Interested in automating your preferred strategies for trading binary options?"></p>
-    				<p data-i18n-text="Binary Bot is our leading-edge programming tool which allows you to build trading apps with a simple “jigsaw puzzle-like” drag-and-drop function."></p>
-                    <p data-i18n-text="Dream up any number of binary options trading bots, from incredibly simple formulas to vastly complex algorithms. Then let them trade for you, even while you sleep."></p>
-    				<p><span data-i18n-text="Best of all, once you’ve built a bot, we can help you sell it to fellow traders in the"></span> <a id="shop-url" href="https://shop.binary.com/collections/strategies" target="_blank" data-i18n-text="Binary.com Shop"></a>. <span data-i18n-text="Receive 80% of the sales revenue from every purchase of your bot in our app store."></span></p>
-                </div>
-                <div class="half-width bottom-image puzzle-logo">
-                    <img src="image/binarylogo-puzzle.svg" alt="">
-                </div>
+				<h1 class="center" data-i18n-text="OneBot"></h1>
+                <h3 class="center" data-i18n-text="A maior inovação no mercado de operações automatizadas!"></h3>
+      		<div style="margin-left:-130px">
+                <video class="elementor-video" src="https://videos.files.wordpress.com/U7UcsR4U/apresentac3a7c3a3o_hd.mp4" autoplay="" controls="" controlslist="nodownload"></video>
 		    </div>
                 <div class="clear">
-                    <p class="cta"><a class="button" href="bot.html"><span data-i18n-text="Begin Building a Bot Now"></span></a></p>
-                    <p class="center"><span data-i18n-text="Need further assistance?"></span> <a href="mailto:affiliates@binary.com" data-i18n-text="Contact us"></a>.</p>
+                    <p class="cta"><a class="button" href="bot.html"><span data-i18n-text="Área de membros"></span></a></p>
+                    <p class="center"><span data-i18n-text="Need further assistance?"></span> <a href="https://api.whatsapp.com/send?phone=5511960718208" data-i18n-text="Fale com um consultor"></a>.</p>
                 </div>
 			</div>
 		</div>
 	</div>
     <div id="footer"></div>
     {{> index}}
-    {{> gtm_iframe }}
+    
 </body>
 </html>
