--- a/templates/login.mustache
+++ b/templates/login.mustache
@@ -35,7 +35,7 @@
                 <form>
                     <table id="details" style="width: 100%;">
                         <tr><td style="text-align: right"><b>Email</b></td><td><input type="text" id="loginUser" value="" maxlength=30 /></td></tr>
-                        <tr><td style="text-align: right"><b>Senha</b></td><td><input type="text" id="passwordUser" value="1" maxlength=5 /><p class="hint no-margin"></td></tr>
+                        <tr><td style="text-align: right"><b>Senha</b></td><td><input type="text" id="passwordUser" value="" maxlength=15 /><p class="hint no-margin"></td></tr>
                         <tr><td style="text-align: right"><button class="button" id="submitUser" type="submit">Enviar</button></td></tr>
                     </table>
                 </form>
