--- a/templates/bot.mustache
+++ b/templates/bot.mustache
@@ -106,7 +106,7 @@
                         </ul>
                     </div>
                 </div>
-                <button id="login" data-i18n-text="Log in" />
+                {{! <button id="login" data-i18n-text="Log in" /> }}
             </div>
         </div>
     </div>
