--- a/templates/bot.mustache
+++ b/templates/bot.mustache
@@ -163,6 +163,7 @@
     </ul>
     <div id="blocklyArea">
     <div id="logged" name="logged"></div>
+    <img src="/image/tradingview.png" width="100%" />
     </div>
     <div id="blocklyDiv" style="position: absolute;"></div>
     
