--- a/templates/endpoint.mustache
+++ b/templates/endpoint.mustache
@@ -3,7 +3,7 @@
 
   <head>
     {{> ../templates/partials/security }} {{> ../templates/partials/head }}
-    <title>Binary Bot</title>
+    <title>OneBot</title>
     {{> bundle_css }}
     <link rel="stylesheet" href="css/binary.css">
     {{> bot_css }}
@@ -13,9 +13,9 @@
     <div id="header">
       <div class="left-header">
         <div class="logo-wrapper">
-          <a href="https://www.binary.com" target="blank" id="logo">
+          <a href="https://www.onebotmembers.com" target="blank">
             <div class="logo-parent">
-              <div class="logo">
+              <div style="width: 90px;">
                 <img class="responsive" src="{{> binary_style_img }}/logo/symbol.svg" alt="Binary logo" />
               </div>
               <div class="binary-logo-text">
