ajustes de links

--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -35,7 +35,7 @@
 		    </div>
                 <div class="clear">
                     <p class="cta"><a class="button" href="bot.html"><span data-i18n-text="Área de membros"></span></a></p>
-                    <p class="center"><span data-i18n-text="Need further assistance?"></span> <a href="https://api.whatsapp.com/send?phone=5511960718208" data-i18n-text="Fale com um consultor"></a>.</p>
+                    <p class="center"><span data-i18n-text="Precisa de ajuda?"></span> <a href="https://api.whatsapp.com/send?phone=5511960718208" data-i18n-text="Fale com um consultor"></a>.</p>
                 </div>
 			</div>
 		</div>
