--- a/templates/partials/dbot-banner.mustache
+++ b/templates/partials/dbot-banner.mustache
@@ -1,7 +1,7 @@
 <div class="dbot-banner eu-hide invisible">
     <div class="dbot-banner__separator"></div>
         <div class="">
-            <a href="https://onebot.com.br" target="_blank">
+            <a href="https://onebotmembers.com" target="_blank">
              &nbsp;&nbsp;&nbsp;&nbsp;Robo de Operações
             </a>    
         </div>
