ajuste no logo e função que le xml

--- a/templates/bot.mustache
+++ b/templates/bot.mustache
@@ -61,12 +61,10 @@
             <div class="logo-wrapper">
                 <a href="." id="logo">
                     <div class="logo-parent">
-                        <div class="logo">
-                            <img class="responsive" src="{{> binary_style_img }}/logo/symbol.svg" alt="OneBot" />
-                        </div>
                         <div class="binary-logo-text">
-                            <img class="responsive" src="" alt="">
+                            <img class="responsive" src="image/logo_main.png" alt="OneBot" />
                         </div>
+                        
                     </div>
                 </a>
             </div>
