--- a/templates/endpoint.mustache
+++ b/templates/endpoint.mustache
@@ -15,11 +15,9 @@
         <div class="logo-wrapper">
           <a href="https://www.onebotmembers.com" target="blank">
             <div class="logo-parent">
-              <div style="width: 90px;">
-                <img class="responsive" src="{{> binary_style_img }}/logo/symbol.svg" alt="Binary logo" />
-              </div>
+              
               <div class="binary-logo-text">
-                <img class="responsive" src="{{> binary_style_img }}/logo/type.svg" alt="Binary logo">
+                <img class="responsive" src="image/logo_main.png" alt="Binary logo">
               </div>
             </div>
           </a>
