--- a/templates/login.mustache
+++ b/templates/login.mustache
@@ -15,11 +15,8 @@
         <div class="logo-wrapper">
           <a href="https://www.onebotmembers.com" target="blank" id="logo">
             <div class="logo-parent">
-              <div class="logo">
-                <img class="responsive" src="{{> binary_style_img }}/logo/symbol.svg" alt="Onebot" />
-              </div>
               <div class="binary-logo-text">
-                <img class="responsive" src="{{> binary_style_img }}/logo/type.svg" alt="OneBot">
+                <img class="responsive" src="image/logo_main.png" alt="OneBot">
               </div>
             </div>
           </a>
