--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -18,11 +18,13 @@
     </div>
 	</div>
 	<div id="header">
+	<div class="left-header">
     		<div class="wrapper">
             <div class="logo-wrapper">
             <div id="binary-logo"></div>
             {{> ../templates/partials/dbot-banner }}
         </div>
+	</div>
     </div>
 	</div>
 	<div id="main">
