. inclusão de novo xml: Combinadifere . criaçao de novo grupo, grupoC com o novo xml . troca do nome do título: de OneBot para Onebot . troca do text doo login para password

--- a/templates/bot.mustache
+++ b/templates/bot.mustache
@@ -3,7 +3,7 @@
 
 <head>
     {{> ../templates/partials/security }} {{> ../templates/partials/head }}
-    <title>OneBot</title>
+    <title>Onebot</title>
     {{> bundle_css }}
     <link rel="stylesheet" href="css/binary.css">
     {{> bot_css }}
@@ -61,7 +61,7 @@
             <div class="logo-wrapper">
                 <a href="." id="logo">
                     <div class="logo-parent">
-                            <img class="responsive" src="image/logo_main.png" alt="OneBot" />
+                            <img class="responsive" src="image/logo_main.png" alt="Onebot" />
                     </div>
                 </a>
             </div>
