--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -4,7 +4,7 @@
 {{> ../templates/partials/security }}
 
 {{> ../templates/partials/head }}
-	<title>Bem vindo ao OneBot</title>
+	<title>Bem vindo ao Onebot</title>
 {{> index_css }}
 <link rel="stylesheet" href="css/binary.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gridle@2.0.48/css/grid-flex.css" integrity="sha256-J4p1c+K4tD3rnyfA0ztZpoQR0+mBhDTZ/J+YNOalc0k=" crossorigin="anonymous">
@@ -30,7 +30,7 @@
 	<div id="main">
 		<div>
 			<div class="content show-on-load">
-				<h1 class="center" data-i18n-text="OneBot"></h1>
+				<h1 class="center" data-i18n-text="Onebot"></h1>
                 <h3 class="center" data-i18n-text="A maior inovação no mercado de operações automatizadas!"></h3>
       		<div style="margin-left:-130px">
                 <video class="elementor-video" src="https://videos.files.wordpress.com/U7UcsR4U/apresentac3a7c3a3o_hd.mp4" autoplay="" controls="" controlslist="nodownload"></video>
