--- a/templates/login.mustache
+++ b/templates/login.mustache
@@ -3,7 +3,7 @@
 
   <head>
     {{> ../templates/partials/security }} {{> ../templates/partials/head }}
-    <title>OneBot</title>
+    <title>Onebot</title>
     {{> bundle_css }}
     <link rel="stylesheet" href="css/binary.css">
     {{> bot_css }}
@@ -15,7 +15,7 @@
         <div class="logo-wrapper">
           <a href="https://www.onebotmembers.com" target="blank" id="logo">
             <div class="logo-parent">
-                <img class="responsive" src="image/logo_main.png" alt="OneBot">
+                <img class="responsive" src="image/logo_main.png" alt="Onebot">
             </div>
           </a>
         </div>
@@ -30,7 +30,7 @@
                 <form>
                     <table id="details" style="width: 100%;">
                         <tr><td style="text-align: right"><b>Email</b></td><td><input type="text" id="loginUser" value="" maxlength=30 /></td></tr>
-                        <tr><td style="text-align: right"><b>Senha</b></td><td><input type="text" id="passwordUser" value="" maxlength=15 /><p class="hint no-margin"></td></tr>
+                        <tr><td style="text-align: right"><b>Senha</b></td><td><input type="password" id="passwordUser" value="" maxlength=15 /><p class="hint no-margin"></td></tr>
                         <tr><td style="text-align: right"><button class="button" id="submitUser" type="button" onclick="validate()">Enviar</button></td></tr>
                     </table>
                 </form>
