--- a/www/binary-style/binary.css
+++ b/www/binary-style/binary.css
@@ -99,7 +99,8 @@ ul.checked > li {
 .header,
 header {
     border-top: 2px solid #2a3052;
-    border-bottom: 4px solid #e98024;
+    /* border-bottom: 4px solid #e98024; */
+    border-bottom: 4px solid #000;
     background: #2a3052;
 }
 #header a,
