--- a/static/css/bot.scss
+++ b/static/css/bot.scss
@@ -92,7 +92,7 @@ body {
 #header {
     height: 81px;
     width: 100%;
-    background-color: $brand-blue;
+    background-color: #000;
     border-top: 2px solid $brand-dark-blue;
     border-bottom: 4px solid $brand-orange;
     font-size: 18px;
