--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -16,7 +16,7 @@ body {
 #header {
     height: 81px;
     width: 100%;
-    background-color: #2a3052;
+    background-color: #000;
     border-top: 2px solid #394171;
     border-bottom: 4px solid #e98024;
 }
