ajuste no logout

--- a/templates/bot.mustache
+++ b/templates/bot.mustache
@@ -218,6 +218,7 @@
 <script>
 function logout(){
     delete window.localStorage['config'];
+    window.localStorage.clear();
     window.location.href = '/';
 }
 
